# carbon-aware-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
src/carbon_agent/: agent.py  gateway.py  mcp_tools.py  observability.py  resilience.py
tests/: test_agent_orchestration.py  test_gateway.py  test_graph_build.py  test_guardrails.py  test_hitl.py  test_integration.py  test_model_factory.py  test_resilience.py  test_tools_used.py
