[project]
name = "carbon-aware-agent"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "langgraph>=1.2,<2",
    "langchain>=1.0,<2",
    "langchain-core>=1.4,<2",
    "langchain-mcp-adapters>=0.3,<0.4",
    "langchain-openai>=0.2",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "httpx>=0.27",
    "structlog>=24.4",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-exporter-otlp-proto-http>=1.27",
]

[project.optional-dependencies]
# Anthropic backend: uv sync --extra anthropic, then set LLM_PROVIDER=anthropic.
anthropic = ["langchain-anthropic>=0.3"]

[dependency-groups]
dev = ["pytest>=8", "pytest-asyncio>=0.24", "ruff>=0.6"]

[project.scripts]
carbon-agent = "carbon_agent.gateway:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]
[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ANN"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/carbon_agent"]